# Observer-Rock

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.ai/: Architektur-Idee.md  DELIVERY_PLAN.md  HANDOVER.md  IMPLEMENTATION_ROADMAP.md  STATUS.md  TASK_BACKLOG.md  Use-Cases-Projekt-Idee.md
examples/file_digest/: README.md  analysis_profiles.yml  monitors.yml
examples/file_digest/input/: feed.json
examples/indexed_file_watch/: README.md  monitors.yml  services.yml
examples/indexed_file_watch/input/: index.json
scripts/: cleanup_workspace.py
src/observer_rock/: __init__.py  __main__.py  scaffold.py
src/observer_rock/application/: __init__.py  artifacts.py  document_intelligence.py  documents.py  monitoring.py  repositories.py  services.py  testing.py  use_cases.py
src/observer_rock/cli/: __init__.py  runtime.py
src/observer_rock/config/: __init__.py  loader.py  models.py  workspace.py
src/observer_rock/infrastructure/: artifacts.py  sqlite.py
src/observer_rock/plugins/: __init__.py  analysis.py  builtin.py  notifier.py  registry.py  rendering.py  source.py
tests/: __init__.py  _helpers.py  conftest.py
tests/component/application/: test_filesystem_artifact_store.py  test_monitor_execution_service_sqlite.py  test_run_service_sqlite.py  (+4 more)
tests/e2e/: test_file_digest_example.py  test_indexed_file_change_tracking.py  test_init_workspace_onboarding.py
tests/unit/: test_bootstrap.py  test_monitor_execution_service_analysis.py  test_monitor_execution_service_outputs.py  test_monitor_execution_service_source.py  test_project_docs.py
(+32 files in other folders)
