[project]
name = "observer-rock"
version = "0.1.0"
description = "Plugin-based document monitoring and analysis framework."
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observer_rock"]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]
